simplifies CSS rules and fixes display issues on mobile

--- a/to-do-list/src/App.css
+++ b/to-do-list/src/App.css
@@ -10,57 +10,64 @@
   text-align: center;
 }
 
-#hero {
+header {
   border-top: 18px solid #003566;
   border-bottom: 14px solid #ffc300;
   border-radius: 0 0 100% 100%;
   padding: 1.2em 2em 2.4em;
 }
 
-.hero-text {
-  background: none;
-}
-
-#hero-header {
+h1 {
   font-family: 'Gochi Hand', cursive;
   font-size: 70px;
 }
 
-#list-header {
+h1,
+h2 {
+  background: none;
+}
+
+h3 {
   margin: 0.9em auto;
   font-family: 'Gochi Hand', cursive;
   font-size: 38px;
 }
 
-#task-list {
+ol {
   margin: 2em auto;
-  padding: 0 0.6em;
+  padding: 0.5em 1em;
   border: 2px solid #FFF8E3;
   border-radius: 10px;
   background: #FFF8E3;
   box-shadow: 0 0 8px gray;
   min-height: 20px;
-  max-width: 270px;
+  width: calc(90vw - 2em);
+  max-width: 480px;
   text-align: start;
 }
 
 .task {
-  display: grid;
-  grid-template-columns: 90px 90px 45px 45px;
-  grid-template-rows: auto;
-  list-style-position: inside;
-  list-style-type: none;
-  margin: 1.2em auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5em 0;
   background: #FFF8E3;
+  word-break: break-word;
 }
 
 #task-body {
-  grid-column: 1 / 3;
-  grid-row: 1;
-  margin: auto auto auto 1.3rem;
-  background: #FFF8E3;
+  background: none;
   font-family: 'Shantell Sans', cursive;
-  font-size: 1rem;
+  font-size: 1.1rem;
+}
+
+#task-btns-wrapper {
+  display: flex;
+  background: none;
+}
+
+#task-btns-wrapper>button {
+  margin-left: 0.8em;
 }
 
 button:hover {
@@ -68,7 +75,6 @@ button:hover {
 }
 
 li button {
-  margin: auto;
   border: none;
   border-radius: 100%;
   box-shadow: 0 0 6px gray;
@@ -106,15 +112,14 @@ li button:active {
 }
 
 #delete-list-button {
-  margin: 0.6em auto;
+  box-shadow: 0 0 6px gray;
   border: none;
   border-radius: 20px;
-  padding: 0.4em 0.8em;
+  padding: 0.5em 1em;
   background: #ff5c0a;
   font-family: 'Shantell Sans', cursive;
+  font-size: 1.4rem;
   color: white;
-  font-size: 1rem;
-  box-shadow: 0 0 6px gray;
   text-shadow: 0 0 1px gray;
 }
 
@@ -122,46 +127,48 @@ li button:active {
   box-shadow: 0 0 10px white;
 }
 
-#task-input-form {
+form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 2rem auto 4.4rem;
+  margin: 2rem auto 6rem;
   border: 2px solid #FFD60A;
   border-radius: 10px;
-  padding: 1.2rem 0.3rem;
+  padding: 1em;
   background: #FFD60A;
   box-shadow: 0 0 8px gray;
-  max-width: 200px;
+  width: calc(90vw - 2em);
+  max-width: 480px;
 }
 
-#task-input-label {
-  margin: auto auto 0.7rem;
+label {
   background: #FFD60A;
   font-family: 'Gochi Hand', cursive;
-  font-size: 24px;
+  font-size: 1.8rem;
   text-shadow: 0 0 2px white;
   color: #001D3D;
 }
 
-#task-input {
-  margin: auto auto 1.1rem;
+input {
+  margin: 1em auto;
   border: 2px solid #001D3D;
   border-radius: 8px;
-  padding: 0 0.5rem;
+  padding: 0 0.8em;
   background: #FFF8E3;
-  line-height: 1.3rem;
+  line-height: 2rem;
+  width: 90%;
+  font-size: 16px;
   font-family: 'Shantell Sans', cursive;
 }
 
 #task-input-button {
-  margin: 0.3em auto;
   border: 2px solid #FFF8E3;
   border-radius: 18px;
-  padding: 0.4rem 1.4rem;
+  padding: 0.4rem 0.8rem;
   background: #FFF8E3;
   box-shadow: 0 0 10px gray;
   font-family: 'Shantell Sans', cursive;
+  font-size: 1.2rem;
   font-weight: 500;
 }
 
